--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "moment-timezone": "^0.5.41"
   }
 }
